<resources>
    <string name="app_name">Damka</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_link"><u>Login</u></string>
    <string name="signup_link"><u>Sign Up</u></string>
    <string name="mail">Mail</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="birthdate">Birthdate</string>
    <string name="create_account">Don\'t have an Account? </string>
    <string name="login_account">Already have an Account? </string>
    <string name="show_password"><u>Show Password</u></string>
    <string name="hide_password"><u>Hide Password</u></string>
    <string name="loading">Loading…</string>
    <string name="failed_connection">"Failed To Connect To The Server"</string>
    <string name="retry">retry</string>
    <string name="none">NONE</string>
    <string name="play">Play</string>
    <string name="play_offline"><u>play offline</u></string>
    <string name="rating">Rating</string>
    <string name="best_rating">Best\nRating</string>
    <string name="games">Games\nPlayed</string>
    <string name="wins">Wins</string>
    <string name="losses">Losses</string>
    <string name="draws">Draws</string>
    <string name="default_profile_value">-1</string>
    <string name="friends">Friends:</string>
    <string name="no_new_messages">No new messages :(</string>
    <string name="remember_me">Remember me</string>
    <string name="logout">Logout</string>

    <string name="default_opponent_value">\@username</string>
    <string name="default_time_value">00:00</string>
    <string name="offer_draw">Offer Draw</string>
    <string name="no_rating">0</string>
    <string name="invite_to_play">Invite</string>
    <string name="chain_capture">chain capture</string>


</resources>