<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_background"
    android:gravity="center">

    <ProgressBar
        android:id="@+id/circle_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        style="@android:style/Widget.ProgressBar"
        android:visibility="visible" />

    <TextView
        android:id="@+id/loading_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/circle_progress_bar"
        android:text="@string/loading"
        android:layout_marginBottom="16dp"
        android:textSize="44sp"
        android:textColor="@color/yellow"
        android:visibility="visible" />

    <Button
        android:id="@+id/retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loading_text"
        android:padding="16dp"
        android:text="@string/retry"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/offline_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/retry_button"
        android:layout_centerHorizontal="true"
        android:text="@string/play_offline"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:visibility="gone" />

</RelativeLayout>
