<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/friend_element_background"
    >

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ratingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="15dp"
        android:drawablePadding="2dp"
        android:text="@string/no_rating"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="visible"
        app:drawableEndCompat="@drawable/ic_trophy_small"
        app:layout_constraintEnd_toStartOf="@+id/game_invite_friend_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/onlineStateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Online"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:drawableStartCompat="@drawable/online_state_circle" />

    <Button
        android:id="@+id/game_invite_friend_button"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:layout_marginEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invite_to_play"
        app:layout_constraintEnd_toStartOf="@id/remove_friend_button"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/remove_friend_button"
        android:background="@color/red"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="remove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>