<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_background"
    android:padding="16dp">

    <!-- Username TextView -->
    <TextView
        android:id="@+id/username_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/none"
        android:textColor="@color/yellow"
        android:textSize="44sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- UserID TextView -->
    <TextView
        android:id="@+id/userID_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/none"
        android:textColor="@color/yellow"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/rating_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_view" />

    <!-- Rating TextView -->
    <TextView
        android:id="@+id/rating_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:text="@string/no_rating"
        android:textColor="@color/yellow"
        android:textSize="44sp"
        app:drawableEndCompat="@drawable/ic_trophy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userID_view" />


    <Button
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/yellow"
        android:text="@string/play"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:paddingHorizontal="35dp"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/setting_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ic_setting"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/inbox_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ic_inbox"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setting_button" />

    <TextView
        android:id="@+id/inbox_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:textColor="@color/red"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/inbox_button"
        app:layout_constraintEnd_toEndOf="@+id/inbox_button"
        app:layout_constraintStart_toStartOf="@+id/inbox_button"
        app:layout_constraintTop_toTopOf="@+id/inbox_button" />

</androidx.constraintlayout.widget.ConstraintLayout>