<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrounds_wood_texture"
    tools:context=".GameActivity">

    <LinearLayout
        android:id="@+id/game_top_padding_view"
        android:background="@color/dark_square"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/top_game_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:paddingStart="5dp"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:gravity="start"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/exit_game_button"
            android:background="@drawable/ic_go_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:gravity="end"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/opponent_username_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_opponent_value"
        android:textSize="38sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game_top_padding_view"
        app:layout_constraintEnd_toStartOf="@id/opponent_rating_view"/>

    <TextView
        android:id="@+id/opponent_rating_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_rating"
        android:textSize="38sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/opponent_username_view"
        app:layout_constraintTop_toBottomOf="@id/game_top_padding_view" />

    <GridLayout
        android:id="@+id/game_board_grid_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:paddingVertical="5dp"
        android:paddingHorizontal="1dp"
        android:columnCount="8"
        android:rowCount="8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/opponent_username_view"
        app:layout_constraintBottom_toTopOf="@id/start_chain_capture" >
    </GridLayout>

    <Button
        android:id="@+id/start_chain_capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/light_square"
        android:padding="15dp"
        android:text="@string/chain_capture"
        android:layout_marginBottom="25dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/left_arrow"
        app:layout_constraintEnd_toStartOf="@id/offer_draw_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/offer_draw_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/draw_color"
        android:padding="15dp"
        android:text="@string/offer_draw"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/start_chain_capture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/start_chain_capture"
        app:layout_constraintTop_toTopOf="@+id/start_chain_capture" />

    <Button
        android:id="@+id/show_ending_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/light_square"
        android:padding="15dp"
        android:visibility="gone"
        android:text="show ending"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/left_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/all_left_arrow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/go_button_off"
        android:padding="5dp"
        android:layout_margin="3dp"
        android:drawableTop="@drawable/ic_go_all_left"
        android:text="current"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/left_arrow"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/left_arrow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/go_button_off"
        android:padding="5dp"
        android:layout_margin="3dp"
        android:drawableTop="@drawable/ic_go_left"
        android:text="next"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_arrow"
        app:layout_constraintStart_toEndOf="@id/all_left_arrow" />

    <Button
        android:id="@+id/right_arrow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/go_button_off"
        android:padding="5dp"
        android:layout_margin="3dp"
        android:drawableTop="@drawable/ic_go_right"
        android:text="back"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@id/left_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/all_right_arrow" />

    <Button
        android:id="@+id/all_right_arrow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/go_button_off"
        android:padding="5dp"
        android:layout_margin="3dp"
        android:drawableTop="@drawable/ic_go_all_right"
        android:text="start"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@id/right_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/game_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="35dp"
        android:textSize="48sp"
        android:background="@color/yellow"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
       android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>